<resources>
    <string name="app_name">Messenger</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Chat">Чат</string>
    <string name="Settings">Настройки</string>
    <string name="ivan_popov">Ivan Popov</string>
    <string name="connect">в сети</string>
    <string name="text_account">Аккаунт</string>
    <string name="_1188561874">+1188561874</string>
    <string name="settings_phone_number">Нажмите, чтобы изменить номер телефона</string>
    <string name="ivanpopoff">ivanpopoff</string>
    <string name="settings_name">Имя пользователя</string>
    <string name="settings_bio">О себе</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="cd_register_image">register_image</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_send">Мы отправили СМС с кодом проверки на Ваш телефон</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="hint">-----------------</string>
    <string name="hint_name">Имя</string>
    <string name="surname_hint">Фамилия</string>
    <string name="settings_toast_name_is_empty">Имя не может быть пустым</string>
    <string name="settings_toast_data_update">Данные обновлены</string>
    <string name="settings_hint_username">username</string>
    <string name="settings_input_bio">bio</string>
    <string name="clear_chat">Очистить чат</string>
    <string name="delete_chat">Удалить чат</string>
    
    <plurals name="count_members">
        <item quantity="one">%d участник</item>
        <item quantity="few">%d участника</item>
        <item quantity="other">%d участников</item>
        <item quantity="many">%d участников</item>
    </plurals>
</resources>
